--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-server/node_modules
-server/package-lock.json
-server/.env
-server/config/dev.js
-
 /client/node_modules
 /client/package-lock.json
 /client/.env
+
+/server/node_modules
+/server/package-lock.json
+server/.env
+server/vercel.json
+server/config/dev.js
