--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
     "swiper": "^9.3.2",
     "web-vitals": "^2.1.4"
