--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.4.2",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.4"
   }
 }
