--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.2",
+    "node-cron": "^3.0.2",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.4"
   }
