--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
+    "blurhash": "^2.0.5",
+    "framer-motion": "^10.15.1",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
